# toywebsite

./: .gitignore  Cargo.toml  README.md
db/: database.sqlite
sql/: migrate.sh
sql/conf/: flyway.conf
sql/sql/: V1__Message.sql
src/: main.rs
src/app/: error.rs  handler.rs  mod.rs  server.rs  validation.rs
src/app/controller/: about.rs  contact.rs  home.rs  messages.rs  mod.rs  not_found.rs
src/app/message/: mod.rs  model.rs  repository.rs
src/app/message/repository/: json.rs  mod.rs  sqlite.rs
static/: styles.css
templates/: about.html  base.html  contact.html  home.html  message_entries.html  messages.html  not_found.html
templates/includes/: header.html
