[package]
name = "mywebsite"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
tokio = { version = "1", features = ["full"] }
hyper = { version = "1.2.0", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
flate2 = "1.0.32"
xxhash-rust = { version = "0.8.5", features = ["xxh3", "const_xxh3"] }
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.7.1"
chrono = "0.4.19"
serde_json = "1.0.127"
futures = "0.3.30"

